tools/tests/ui/fail/l1004.cnf
// Test file for error code: L1004
// Expected error: Invalid Unexpected character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
